@@ -58,7 +58,6 @@ sources = """
           make_signer_chain_dialog.cc
           new_film_dialog.cc
           preset_colour_conversion_dialog.cc
-          properties_dialog.cc
           repeat_dialog.cc
           report_problem_dialog.cc
           screen_dialog.cc
