@@ -1,5 +1,8 @@
 2015-07-08  c.hetherington  <cth@carlh.net>
 
+	* Remove the (I suspect) rarely used and very limited
+	'properties' dialogue.
+
 	* Stop V2 recognising V1 servers and vice versa (#510).
 
 2015-07-07  Carl Hetherington  <cth@carlh.net>
